name:                locus-graphhopper-gpx
version:             0.1.0.0
synopsis:            Convert GraphHopper JSON to GPX with Locus nav. instructions
homepage:            https://github.com/liskin/locus-graphhopper-gpx
license:             MIT
license-file:        LICENSE
author:              Tomas Janousek
maintainer:          tomi@nomi.cz
build-type:          Simple
cabal-version:       >=1.10

executable locus-graphhopper-gpx
  main-is:             ConvTool.hs
  build-depends:       base == 4.*,
                       aeson == 0.7.*,
                       bytestring,
                       gpolyline == 0.1.*,
                       xml
  default-language:    Haskell2010
